# dupfinder

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  documentation.yml
docs/: Makefile  cli.rst  conf.py  configuration.rst  getting_started.rst  index.rst
docs/api/: accelerator.rst  constants.rst  images.rst  index.rst  utils.rst  videos.rst
docs/api/_autosummary/: dupfinder.AcceleratorType.rst  dupfinder.GPUAccelerator.rst  dupfinder.ImageDuplicateFinder.rst  dupfinder.ImageHasher.rst  dupfinder.ImageInfo.rst  dupfinder.VideoDuplicateFinder.rst  dupfinder.VideoHasher.rst  dupfinder.VideoInfo.rst  dupfinder.get_accelerator.rst
src/dupfinder/: __init__.py  accelerator.py  cli.py  constants.py  images.py  utils.py  videos.py
tests/: conftest.py  test_accelerator.py  test_cli.py  test_constants.py  test_images.py  test_utils.py  test_videos.py
